# scylla-javascript-driver

./: .eslintrc.yml  .gitignore  .gitmodules  .prettierignore  Cargo.toml  LICENSE  README.md  base.mts  browser.js  debug.mts  index.d.ts  index.js  package-template.wasi-browser.js  package-template.wasi.cjs  package.json  pnpm-lock.yaml  rust-analyzer.json  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: CI.yml  lint.yml
.zed/: tasks.json
__test__/: index.spec.ts  tsconfig.json  uuid.spec.ts
benchmark/: bench.ts
examples/: auth.mts  basic.mts  batch-statements.mts  fetch-schema.mts  lwt.mts  prepared.mts  refactor-test.mts  tls.mts  tracing.mts  tsconfig.json  udt.mts
examples/custom-types/: bigint.mts  double.mts  floats.mts  list.mts  map.mts  set.mts  udt.mts  uuid.mts  varint.mts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/wasm32-wasi/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
pack/: index.d.ts  index.js
scripts/: fix-files.mjs  fix-files.ts
src/: error.rs  lib.rs
src/cluster/: cluster_config.rs  mod.rs  scylla_cluster.rs
src/cluster/cluster_config/: compression.rs  mod.rs
src/cluster/config/: cluster_config.rs  compression.rs  mod.rs
src/cluster/execution_profile/: consistency.rs  mod.rs  serial_consistency.rs
src/helpers/: cql_value_bridge.rs  mod.rs  query_parameter.rs  query_results.rs  to_cql_value.rs
src/query/: batch_statement.rs  mod.rs  scylla_prepared_statement.rs  scylla_query.rs
src/session/: metrics.rs  mod.rs  scylla_session.rs  topology.rs
src/types/: decimal.rs  double.rs  duration.rs  float.rs  list.rs  map.rs  mod.rs  set.rs  tracing.rs  uuid.rs  varint.rs
