[package]
authors = ["Daniel Boll <danielboll.dev@proton.me>"]
edition = "2021"
name = "scylladb-driver"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = [
  "napi8",
  "async",
  "serde",
  "serde_json",
  "serde-json",
] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
scylla = { version = "0.13.1", features = [
  "ssl",
  "full-serialization",
  "cloud",
] }
uuid = { version = "1.10", features = ["serde", "v4", "fast-rng"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
